Connecting part of message ui

--- a/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/AndroidManifest.xml
+++ b/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/AndroidManifest.xml
@@ -23,6 +23,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="org.techtown.recherche.MessageList">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name="org.techtown.recherche.MessageView">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name="org.techtown.recherche.RechercheActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
