Completing profile section

--- a/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/AndroidManifest.xml
+++ b/Feed_Rech_Filtre_Favorite_AutrePersonInfo/app/src/main/AndroidManifest.xml
@@ -31,6 +31,41 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="org.techtown.recherche.ProfilActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name="org.techtown.recherche.Contacts">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name="org.techtown.recherche.Info_Perso">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+
+        <activity android:name="org.techtown.recherche.Notifications">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+
+
         <activity android:name="org.techtown.recherche.MessageView">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
